--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             </li>
                             <li class="nav-item nav-link">
                                 <a class="nav-link" href="#contact">
-                                    contact
+                                    Socials
                                 </a>
                             </li>
                             <li class="nav-item nav-link">
@@ -77,7 +77,7 @@
                                 <span style="background-color: rgb(24, 24, 24);">
                                     ItIzYe is an up-and-coming artist from the South of Germany with a passion for creating music that speaks to his listeners. He has been making music since he was just a teenager, crafting beats in his bedroom studio and releasing them on 
                                 </span>
-                                <a href="https://soundcloud.com/itizyemusic">
+                                <a href="#contact">
                                     <span style="background-color: rgb(24, 24, 24);">
                                         SoundCloud
                                     </span>
@@ -133,7 +133,7 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>
-                                Contact us
+                                SOCIALS
                             </h2>
                             <p>
                                 Feel free to visit my socials and listen to my Music!
