--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="/assets/css/styles.min.css?h=c7aaab7dc3f3935182adc1db08bfecad">
         </head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WS2KL5REZB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WS2KL5REZB');
+</script>
         <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
                 <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
                     <div class="container"><a class="navbar-brand" href="#">
