--- a/index.html
+++ b/index.html
@@ -1,208 +1,1 @@
-<!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-            <title>
-                Home - Brand
-            </title>
-            <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=56ac0ec133e27aff839b2e0be71ab12f">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <link rel="stylesheet" href="/assets/css/styles.min.css?h=c7aaab7dc3f3935182adc1db08bfecad">
-        </head>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WS2KL5REZB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-WS2KL5REZB');
-</script>
-        <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
-                <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-                    <div class="container"><a class="navbar-brand" href="#">
-                        IIY
-                    </a>
-                    <button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item nav-link">
-                                <a class="nav-link active" href="#about">
-                                    About
-                                </a>
-                            </li>
-                            <li class="nav-item nav-link">
-                                <a class="nav-link" href="#download">
-                                    download
-                                </a>
-                            </li>
-                            <li class="nav-item nav-link">
-                                <a class="nav-link" href="#contact">
-                                    Socials
-                                </a>
-                            </li>
-                            <li class="nav-item nav-link">
-                                <a class="nav-link" href="gallery.html">
-                                    Gallery
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <header class="masthead" style="background-image: url('/assets/img/intro-bg.jpg?h=145cae4a8124ee5dac950230c1552d3c');">
-                <div class="intro-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <h1 class="brand-heading">
-                                    ItIzYe
-                                </h1>
-                                <p class="intro-text">
-                                    A small bedroom Artist from the South of Germany
-                                </p>
-                                <a class="btn btn-link btn-circle" role="button" href="#about">
-                                    <i class="fa fa-angle-double-down animated">
-
-                                    </i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <section class="text-center content-section" id="about">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 mx-auto">
-                            <h2>
-                                About ItIzYe
-                            </h2>
-                            <p>
-                                <br>
-                                <span style="background-color: rgb(24, 24, 24);">
-                                    ItIzYe is an up-and-coming artist from the South of Germany with a passion for creating music that speaks to his listeners. He has been making music since he was just a teenager, crafting beats in his bedroom studio and releasing them on 
-                                </span>
-                                <a href="#contact">
-                                    <span style="background-color: rgb(24, 24, 24);">
-                                        SoundCloud
-                                    </span>
-                                </a>
-                                <span style="background-color: rgb(24, 24, 24);">
-                                    .
-                                </span>
-                                <br>
-                                <br>
-                            </p>
-                            <p>
-                                <br>
-                                <span style="background-color: rgb(24, 24, 24);">
-                                    His sound blends elements of hip hop, R&amp;B, pop, and EDM into one unique style all its own. With lyrical content focused on topics like love and heartbreak, personal growth, and social issues, ItIzYe's songs are sure to evoke emotion in any listener.&nbsp;
-                                </span>
-                            </p>
-                            <p>
-                                <br>
-                                <span style="background-color: rgb(24, 24, 24);">
-                                    With no signs of slowing down anytime soon, ItIzYe is ready to take the world by storm with his unique blend of musical styles.
-                                </span>
-                                <br>
-                                <br>
-                                <br>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="text-center download-section content-section" id="download" style="background-image: url('/assets/img/downloads-bg.jpg?h=a1c980f5883ce005385e0ccdc3919d4c');">
-                <div class="container">
-                    <div class="col-lg-8 mx-auto">
-                        <h1>
-                            Listen to my newest song
-                        </h1>
-                        <p>
-                            You can listen to my newest Song 
-                            <strong>
-                                <em>
-                                    souls ft. nickthekid
-                                </em>
-                            </strong>
-                            on Soundcloud
-                        </p>
-                        <a class="btn btn-primary btn-lg btn-default" role="button" href="https://soundcloud.com/itizyemusic/souls-ft-nickthekid?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            Listen
-                        </a>
-                    </div>
-                </div>
-            </section>
-            <section class="text-center content-section" id="contact">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 mx-auto">
-                            <h2>
-                                SOCIALS
-                            </h2>
-                            <p>
-                                Feel free to visit my socials and listen to my Music!
-                            </p>
-                            <ul class="list-inline banner-social-buttons">
-                                <li class="list-inline-item">
-                                    &nbsp;
-                                    <a class="btn btn-primary btn-lg btn-default" role="button" href="https://www.instagram.com/itizye.music/">
-                                        <i class="fa fa-instagram fa-fw">
-
-                                        </i>
-                                        <span class="network-name">
-                                            Insta
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    &nbsp;
-                                    <a class="btn btn-primary btn-lg btn-default" role="button" href="https://open.spotify.com/artist/2hr74QHolcD1Fa4ntermSi?si=IXxD9XyKRFaC99paMyWaDQ">
-                                        <i class="fa fa-spotify fa-fw">
-
-                                        </i>
-                                        <span class="network-name">
-                                            &nbsp;Spotify
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    &nbsp;
-                                    <a class="btn btn-primary btn-lg btn-default" role="button" href="https://www.youtube.com/channel/UC52TM6XsnQyjsBHZENfV5Xg">
-                                        <i class="fa fa-youtube-play fa-fw">
-
-                                        </i>
-                                        <span class="network-name">
-                                            &nbsp;Youtube
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- Start: Map Clean -->
-            <div class="map-clean">
-
-            </div>
-            <!-- End: Map Clean -->
-            <footer>
-                <div class="container text-center">
-                    <p>
-                        Copyright ©&nbsp;IIY2023
-                    </p>
-                </div>
-            </footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
-
-            </script>
-            <script src="/assets/js/script.min.js?h=e141ba749a4b7c929490f2add43b2869">
-
-            </script>
-            </body>
-            </html>
+<!DOCTYPE html><html data-bs-theme="light"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home - Brand</title><link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=f394056d9bbad6d73d2c2a22953aaf59"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=a62d611ddb97c41a1891f830f1c944ef"></head><body><nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"><div class="container"><a class="navbar-brand logo" href="#">IIY</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="/projects-compact-grid.html">Music &amp; Arts</a></li><li class="nav-item"><a class="nav-link" href="/projects-grid-cards.html">Privat</a></li></ul></div></div></nav><main class="page lanidng-page"><section class="portfolio-block block-intro"><div class="container"><div class="avatar" style="background: url(&quot;/assets/img/20111231-P1010284.jpg?h=623b2bce4410beb6609d4b2544acc331&quot;) center / cover;"></div><div class="about-me"><p>18 y/o</p></div></div></section><section class="portfolio-block photography"><div class="container"><div class="row g-0"><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0011.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0006.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0004.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div></div></div></section></main><footer class="page-footer py-3 border-top"><div class="container my-4"><div class="links"></div><div class="social-icons"><a class="me-3" href="https://www.instagram.com/rbn.ade/"><i class="icon ion-social-instagram-outline"></i></a></div></div></footer><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=8f2950253cc49508fb3352618a979f35"></script></body></html>
