--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-<!DOCTYPE html><html data-bs-theme="light"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home - Brand</title><link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=f394056d9bbad6d73d2c2a22953aaf59"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=a62d611ddb97c41a1891f830f1c944ef"></head><body><nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"><div class="container"><a class="navbar-brand logo" href="#">IIY</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="/projects-compact-grid.html">Music &amp; Arts</a></li><li class="nav-item"><a class="nav-link" href="/projects-grid-cards.html">Privat</a></li></ul></div></div></nav><main class="page lanidng-page"><section class="portfolio-block block-intro"><div class="container"><div class="avatar" style="background: url(&quot;/assets/img/20111231-P1010284.jpg?h=623b2bce4410beb6609d4b2544acc331&quot;) center / cover;"></div><div class="about-me"><p>18 y/o</p></div></div></section><section class="portfolio-block photography"><div class="container"><div class="row g-0"><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0011.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0006.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0004.jpg?h=575c4c15e336874d0db4548334b9e425"></a></div></div></div></section></main><footer class="page-footer py-3 border-top"><div class="container my-4"><div class="links"></div><div class="social-icons"><a class="me-3" href="https://www.instagram.com/rbn.ade/"><i class="icon ion-social-instagram-outline"></i></a></div></div></footer><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=8f2950253cc49508fb3352618a979f35"></script></body></html>
+<!DOCTYPE html>
+<html data-bs-theme="light">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - ItIzYe</title>
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=f394056d9bbad6d73d2c2a22953aaf59">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="/assets/css/styles.min.css?h=a62d611ddb97c41a1891f830f1c944ef">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark">
+      <div class="container">
+        <a class="navbar-brand logo" href="#">IIY</a>
+        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav">
+          <span class="visually-hidden">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/musicandarts.html">Music &amp; Arts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/privat.html">Privat
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main class="page lanidng-page">
+      <section class="portfolio-block block-intro">
+        <div class="container">
+          <div class="avatar" style="background: url(&quot;/assets/img/20111231-P1010284.jpg?h=623b2bce4410beb6609d4b2544acc331&quot;) center / cover;"></div>
+          <div class="about-me">
+            <p>18 y/o</p>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio-block photography">
+        <div class="container">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+              <a href="#">
+                <img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0011.jpg?h=575c4c15e336874d0db4548334b9e425">
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+              <a href="#">
+                <img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0006.jpg?h=575c4c15e336874d0db4548334b9e425">
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+              <a href="#">
+                <img class="img-fluid image" src="/assets/img/20240524-CCI05242024_0004.jpg?h=575c4c15e336874d0db4548334b9e425">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer py-3 border-top">
+      <div class="container my-4">
+        <div class="links"></div>
+        <div class="social-icons"><a class="me-3" href="https://www.instagram.com/rbn.ade/">
+          <i class="icon ion-social-instagram-outline"></i>
+        </a>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/script.min.js?h=8f2950253cc49508fb3352618a979f35"></script>
+  </body>
+</html>
