--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
               <a class="nav-link active" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="musicandarts.html">Music &amp; Arts</a>
+              <a class="nav-link" href="/musicandarts.html">Music &amp; Arts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="privat.html">Privat
+              <a class="nav-link" href="/privat.html">Privat
               </a>
             </li>
           </ul>
