--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
               <a class="nav-link" href="/musicandarts.html">Music &amp; Arts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/privat.html">Privat
-              </a>
+              <a class="nav-link" href="/privat.html">Privat</a>
             </li>
           </ul>
         </div>
