--- a/musicandarts.html
+++ b/musicandarts.html
@@ -17,8 +17,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="projects-compact-grid.html">Music &amp; Arts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Privat</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="musicandarts.html">Music &amp; Arts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privat.html">Privat</a></li>
                 </ul>
             </div>
         </div>
