--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Projects - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
@@ -16,28 +16,18 @@
         <div class="container"><a class="navbar-brand logo" href="#">IIY</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects-compact-grid.html">Music &amp; Arts</a></li>
                     <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="page lanidng-page">
-        <section class="portfolio-block block-intro">
+    <main class="page projects-page">
+        <section class="portfolio-block projects-cards">
             <div class="container">
-                <div class="avatar" style="background: url(&quot;assets/img/20111231-P1010284.jpg&quot;) center / cover;"></div>
-                <div class="about-me">
-                    <p>18 y/o</p>
-                </div>
-            </div>
-        </section>
-        <section class="portfolio-block photography">
-            <div class="container">
-                <div class="row g-0">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/20240524-CCI05242024_0011.jpg"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/20240524-CCI05242024_0006.jpg"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/20240524-CCI05242024_0004.jpg"></a></div>
+                <div class="heading">
+                    <h2>Du gehörst hier nicht hin</h2>
                 </div>
             </div>
         </section>
