--- a/musicandarts.html
+++ b/musicandarts.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="projects-compact-grid.html">Music &amp; Arts</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="musicandarts.html">Music &amp; Arts</a></li>
                     <li class="nav-item"></li>
                 </ul>
             </div>
