Update and rename projects-compact-grid.html to musicandarts.html

--- a/musicandarts.html
+++ b/musicandarts.html
@@ -17,9 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="musicandarts.html">Music & Arts</a></li>
                     <li class="nav-item"><a class="nav-link active" href="projects-compact-grid.html">Projects</a></li>
                 </ul>
             </div>
