--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Music &amp; Arts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="musicandarts.html">Music &amp; Arts</a></li>
                     <li class="nav-item">
                         <div class="row" style="margin-top: 15px;">
                             <div class="col">
