--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
     </main>
     <footer class="page-footer py-3 border-top">
         <div class="container my-4">
-            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
-            <div class="social-icons"><a class="me-3" href="#"><i class="icon ion-social-facebook"></i></a><a class="me-3" href="#"><i class="icon ion-social-instagram-outline"></i></a><a class="me-3" href="#"><i class="icon ion-social-twitter"></i></a></div>
+            <div class="social-icons"><a class="me-3" href="https://instagram.com/rbn.ade"><i class="icon ion-social-instagram-outline"></i></a></div>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
