--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   gtag('config', 'AW-16585536311');
 </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1519539972849804"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - IIY</title>
