--- a/index.html
+++ b/index.html
@@ -113,7 +113,15 @@
     <link rel="stylesheet" href="assets/css/Dark-Mode-Switch.css">
     <link rel="stylesheet" href="assets/css/pikaday.min.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WS2KL5REZB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-WS2KL5REZB');
+</script>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark">
         <div class="container"><a class="navbar-brand logo" href="#">IIY</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
