--- a/air.html
+++ b/air.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:#3e5c75 ;">
-  <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Museumsnacht 2025</h1>
+  <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I - Air</h2>
   <br>
   <br>
@@ -39,7 +39,8 @@
   </p>
   <br>
   <br>
-  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Music for the Funeral of Queen Mary - Henry Purcell</h3>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Music for the Funeral of Queen Mary-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">March and Canzona - Henry Purcell</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
     Henry Purcell (1659–1695) gilt als der bedeutendste englische Komponist des Barock. Schon zu 
 Lebzeiten trug er den Beinamen „Orpheus Britannicus“, weil es ihm gelang, die strenge 
@@ -59,6 +60,7 @@ Erhabenheit zu schaffen.
   </p>
   <br>
   <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Orchestersuite N°3; BWV 1068-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Air - Johann Sebastian Bach</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
     Johann Sebastian Bach (1685–1750) war Thomaskantor in Leipzig und gilt heute als der 
