--- a/air.html
+++ b/air.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color:#3e5c75 ;">
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
-  <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">IV - Wandel</h2>
+  <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I - Air</h2>
   <br>
   <br>
   <br>
