--- a/air.html
+++ b/air.html
@@ -10,6 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:#3e5c75 ;">
+  <div style="background-color:#26425a; height: 100px; font-family: 'EB Garamond', serif;">
+  <div style="display: flex; justify-content: space-around; align-items: center; height: 100%;">
+    <a href="index.html" style="color: #d9e1e8; text-decoration: none;">HOME</a>
+    <a href="lamer.html" style="color: #d9e1e8; text-decoration: none;">LA MER</a>
+    <a href="tides.html" style="color: #d9e1e8; text-decoration: none;">TIDES</a>
+    <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
+  </div>
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I - Air</h2>
   <br>
