--- a/wandel.html
+++ b/wandel.html
@@ -12,7 +12,7 @@
 <body style="background-color:#3e5c75 ;">
   <div style="background-color:#26425a; height: 100px; font-family: 'EB Garamond', serif;">
   <div style="display: flex; justify-content: space-around; align-items: center; height: 100%;">
-    <a href="home.html" style="color: #d9e1e8; text-decoration: none;">HOME</a>
+    <a href="index.html" style="color: #d9e1e8; text-decoration: none;">HOME</a>
     <a href="air.html" style="color: #d9e1e8; text-decoration: none;">AIR</a>
     <a href="lamer.html" style="color: #d9e1e8; text-decoration: none;">LA MER</a>
     <a href="tides.html" style="color: #d9e1e8; text-decoration: none;">TIDES</a>
