--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en"><head><meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Museumsnacht</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
   </div>
 </div>
-  <h2 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; padding-top: 15%; font-size: 70px; color: #d9e1e8;">Museumsnacht 2025</h1>
+  <h2 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; padding-top: 15%; font-size: 500%; color: #d9e1e8;">Museumsnacht 2025</h1>
   <br>
   <br>
     <h1 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; color: #d9e1e8;">Mitwirkende</h1>
