--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
   </div>
 </div>
-  <h2 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; padding-top: 15%; font-size: 500%; color: #d9e1e8;">Museumsnacht 2025</h1>
+  <h2 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; padding-top: 15%; font-size: 10vw; color: #d9e1e8;">Museumsnacht 2025</h1>
   <br>
   <br>
     <h1 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; color: #d9e1e8;">Mitwirkende</h1>
