--- a/prgm.html
+++ b/prgm.html
@@ -1,1 +1,122 @@
-<h1>test<h1>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en"><head><meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Museumsnacht</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/styles.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+</head>
+<body style="background-color:#3e5c75 ;">
+  <div style="background-color:#26425a; height: 100px; font-family: 'EB Garamond', serif;">
+  <div style="display: flex; justify-content: space-around; align-items: center; height: 100%;">
+    <a href="index.html" style="color: #d9e1e8; text-decoration: none;">HOME</a>
+    <a href="air.html" style="color: #d9e1e8; text-decoration: none;">AIR</a>
+    <a href="tides.html" style="color: #d9e1e8; text-decoration: none;">TIDES</a>
+    <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
+  </div>
+  <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
+  <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">II - La Mer</h2>
+  <br>
+  <br>
+  <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-La Mer-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Lever de Soleil - Paul Gibson</h3>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
+    Benjamin Britten (1913–1976) war einer der bedeutendsten britischen Komponisten des 20. 
+    Jahrhunderts. Er prägte die englische Musiklandschaft mit Opern, Orchesterwerken, 
+    Kammermusik und Chorwerken, die gleichermaßen technisch anspruchsvoll wie emotional 
+    zugänglich sind. Britten hatte ein feines Gespür für Klangfarben und besondere 
+    Instrumentenkombinationen, was ihm eine unverwechselbare Stimme in der Musik seiner Zeit 
+    verlieh. 
+    Die Fanfare for St. Edmundsbury komponierte er 1959 anlässlich eines Festes an der Kathedrale 
+    von St. Edmundsbury in Bury St Edmunds. Die Fanfare ist für drei Trompeten geschrieben, die 
+    jeweils eigene harmonische Serien verwenden – so dass die Stimmen unabhängig voneinander 
+    wirken, sich aber in einem triumphalen Zusammenklang vereinen. Das Werk ist kurz, aber 
+    intensiv: Britten spielt mit Klangfarben, räumlicher Wirkung und dem Zusammenspiel der 
+    Trompeten. Besonders bemerkenswert ist der Aufbau, bei dem jede Trompete nacheinander ein 
+    Solo spielt, bevor alle zusammen die finale Harmonie bilden. 
+    Die Fanfare spiegelt sowohl den feierlichen Anlass als auch Brittens Sinn für Struktur und 
+    Klarheit wider. Sie zeigt, wie er selbst auf kleinstem Raum musikalische Spannung und festliche 
+    Erhabenheit erzeugen kann. Trotz ihrer Kürze hinterlässt das Stück einen bleibenden Eindruck 
+    durch die Kombination aus Präzision, Klangschönheit und einer subtilen, beinahe spielerischen 
+    Virtuosität. Heute wird die Fanfare regelmäßig bei festlichen Anlässen und Konzerten mit 
+    Blechbläsern aufgeführt und gilt als ein Beispiel für Brittens meisterhafte Handwerkskunst.
+  </p>
+  <br>
+  <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Don Quixote-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Quiteria and Basilio - Ludwig Minkus</h3>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
+    Ludwig Minkus (1826–1917) war ein österreichischer Komponist, der den größten Teil seines Lebens in Russland verbrachte.
+     Dort machte er Karriere als Ballettkomponist und arbeitete eng mit dem 
+     berühmten Choreografen Marius Petipa zusammen. Minkus schrieb zahlreiche Ballette,
+      von denen heute vor allem Don Quixote regelmäßig auf den Spielplänen steht. 
+      Das Ballett wurde 1869 in Moskau uraufgeführt und basiert lose auf 
+      Episoden aus Miguel de Cervantes’ berühmtem Roman.
+    Die Szene von Quiteria (oft auch Kitri genannt) und Basilio gehört zu den temperamentvollsten
+     und beliebtesten Teilen des Balletts. Minkus’ Musik ist geprägt von schwungvollen Rhythmen,
+      eingängigen Melodien und einem unverkennbaren spanischen Kolorit, 
+      das die tänzerische Handlung unterstützt. Sie besitzt eine Direktheit und Klarheit,
+       die das Publikum unmittelbar mitreißt – man spürt förmlich die Energie der Bühne.
+        Obwohl Minkus heute im Schatten größerer Namen steht, ist seine Musik ein 
+        Paradebeispiel für die Kunst des Balletts im 19. Jahrhundert: sie dient nicht nur als Begleitung,
+         sondern treibt das Bühnengeschehen kraftvoll voran und entfaltet dabei einen eigenen Charme.
+  </p>
+  <br>
+  <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Klavierkonzert N°2-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">II. Andante - Dimitri Shostakovich</h3>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
+    Dmitri Schostakowitsch (1906–1975) war eine der prägendsten Figuren des 20. Jahrhunderts. 
+    Unter dem sowjetischen Regime schrieb er Musik voller Zwiespälte: zwischen Anpassung und Widerstand,
+    Ironie und tiefer Trauer. Sein zweites Klavierkonzert entstand 1957 als Geschenk an seinen Sohn Maxim, 
+    der es zu seiner Abschlussprüfung spielte. Anders als viele seiner ernsten Werke ist dieses Konzert
+    insgesamt von heiterem, fast spielerischem Charakter.
+    Das Andante, der Mittelsatz, bildet jedoch das lyrische Herzstück des Werkes.
+     Über einem sanft schreitenden Klavier entfaltet sich eine weit gespannte Melodie,
+      die von den Streichern aufgenommen wird. Die Musik wirkt schlicht und innig,
+       beinahe wie ein romantisches Lied ohne Worte. Gerade diese Einfachheit macht 
+       ihre Wirkung aus: sie vermittelt Ruhe, Wärme und ein Gefühl von persönlicher Nähe.
+        Der Satz ist zu einem der beliebtesten Werke Schostakowitschs geworden und 
+        wird oft auch einzeln aufgeführt. Er zeigt eine Seite des Komponisten, 
+        die von stiller Schönheit geprägt ist – weit entfernt von den grellen Konflikten,
+         die man sonst mit seiner Musik verbindet.
+  </p>
+  <br>
+  <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-The Theory of Everything-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Chalkboard - Jóhann Jóhannson</h3>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
+    Jóhann Jóhannsson (1969–2018) war ein isländischer Komponist, der Minimalismus, 
+    Elektronik und klassische Musik auf einzigartige Weise verband. In seiner Musik verbinden 
+    sich sparsame, wiederkehrende Strukturen mit subtilen Klangfarben zu meditativen, 
+    beinahe hypnotischen Atmosphären. Chalkboard ist ein besonders eindrucksvolles 
+    Beispiel dafür: Mit wenigen, sorgfältig gesetzten Klängen erschafft Jóhannsson 
+    eine ruhige, introspektive Stimmung. Die Töne schwingen über lange Strecken, 
+    wiederholen sich in minimalen Variationen und öffnen einen Raum, in dem Stille 
+    ebenso Teil der Musik wird wie der Klang selbst. Das Stück wirkt dabei 
+    fast filmisch: Es erzeugt Spannung und Erwartung, ohne je dramatische Effekte einzusetzen. 
+    Jóhannssons Musik zeigt, wie reduzierter Minimalismus emotionale Tiefe erzeugen kann, 
+    und lädt das Publikum ein, sich voll auf den Klang einzulassen, die Zeit wahrzunehmen 
+    und in der Ruhe Details zu entdecken, die erst bei genauerem Hinhören deutlich werden.
+  </p>
+  <br>
+  <br>
+  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Ma Mere l'oye-</h4>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">V. Le Jardin Feerique - Maurice Ravel</h3>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
+    Maurice Ravel (1875–1937) gilt als einer der Meister der französischen Impression. 
+    Seine Musik besticht durch klare Strukturen, raffinierte Orchestrierung und leuchtende Klangfarben.
+     Die Suite Ma Mère l’Oye („Mutter Gans“) komponierte Ravel zunächst für Klavier 
+     vierhändig und instrumentierte sie später für Orchester. Das Finale, Le Jardin féerique („Der Feengarten“), 
+     entfaltet eine märchenhafte, schwebende Atmosphäre. Ravel nutzt sanft schwebende Harmonien, 
+     delikate Instrumentalfarben und dynamische Steigerungen, um eine Welt voller Zauber und Leichtigkeit
+      zu erschaffen. Der Zuhörer wird von einem leisen Beginn zu einem funkelnden Höhepunkt getragen, 
+      in dem alle Instrumente zusammenwirken, ohne je die Transparenz zu verlieren. Das Stück 
+      verkörpert Ravels Fähigkeit, Klangfarben poetisch einzusetzen: Man spürt gleichzeitig die 
+      Detailgenauigkeit und die erzählerische Dimension, die jeden Ton lebendig erscheinen lassen.
+  </p>
+</body>
